--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@ table{
 .calendar, th, td{
     border: 1px solid black;
     border-collapse: collapse;
-    width: 40px;
-    width: 500px;
+    width: 400px;
+    height: 30px;
     text-align: center;
 }
 
